fix(gateway): Do not enforce query encoding and set error message in case of bad request
Closes gravitee-io/issues#832